compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_int_radix_literal-9.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := 10#999a9a9"

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 0..1 }): Expr(Name(Name(UseId(DefId(0), 0))))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 5..15 }): Expr(Literal(Integer(0)))
HirId(Idx::<HirNode>(2)) (Span { file: None, range: 0..15 }): Stmt(Assign(Assign { lhs: ExprId(HirId(Idx::<HirNode>(0))), op: Spanned(None, Span { file: None, range: 2..4 }), rhs: ExprId(HirId(Idx::<HirNode>(1))) }))

root stmts:
[StmtId(HirId(Idx::<HirNode>(2)))]
symtab:
DefId(0): (Span { file: None, range: 0..1 }, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): Span { file: None, range: 0..1 }
error at 11..12: invalid digit for the specified base

