compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_multiple_invalid_char_seq_escapes.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := '\\777\\ud800\\!'"

---
database:
stmt:
Idx::<Stmt>(0) (0..19): Assign(Assign { lhs: Idx::<Expr>(0), op: Spanned(None, 2..4), rhs: Idx::<Expr>(1) })

expr:
Idx::<Expr>(0) (0..1): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (5..19): Literal(CharSeq("��!"))

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (0..1, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): 0..1
error at 6..10: invalid char literal: octal character value is greater than \377 (decimal 255)
error at 10..16: invalid char literal: surrogate chars are not allowed in char sequences
error at 16..18: invalid char literal: unknown backslash escape

