compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_multiple_stmts.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "_ := a _ := b _ := c"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..20): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..20): []
        Assign@(FileId(1), 0..6): None
          Name@(FileId(1), 0..1): "_"@(FileId(1), 0..1), undeclared
          Name@(FileId(1), 5..6): "a"@(FileId(1), 5..6), undeclared
        Assign@(FileId(1), 7..13): None
          Name@(FileId(1), 7..8): "_"@(FileId(1), 0..1), undeclared
          Name@(FileId(1), 12..13): "b"@(FileId(1), 12..13), undeclared
        Assign@(FileId(1), 14..20): None
          Name@(FileId(1), 14..15): "_"@(FileId(1), 0..1), undeclared
          Name@(FileId(1), 19..20): "c"@(FileId(1), 19..20), undeclared

