compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_paren_expr-2.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := (((a)))"

---
database:
stmt:
Idx::<Stmt>(0) (Span { file: None, range: 0..12 }): Assign(Assign { lhs: Idx::<Expr>(0), op: Spanned(None, Span { file: None, range: 2..4 }), rhs: Idx::<Expr>(4) })

expr:
Idx::<Expr>(0) (Span { file: None, range: 0..1 }): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (Span { file: None, range: 8..9 }): Name(Name(UseId(DefId(0), 1)))
Idx::<Expr>(2) (Span { file: None, range: 7..10 }): Paren(Paren { expr: Idx::<Expr>(1) })
Idx::<Expr>(3) (Span { file: None, range: 6..11 }): Paren(Paren { expr: Idx::<Expr>(2) })
Idx::<Expr>(4) (Span { file: None, range: 5..12 }): Paren(Paren { expr: Idx::<Expr>(3) })

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (Span { file: None, range: 0..1 }, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 2 })
UseId(DefId(0), 0): Span { file: None, range: 0..1 }
UseId(DefId(0), 1): Span { file: None, range: 8..9 }

