compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_paren_expr-3.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := ()"

---
database:
stmt:
Idx::<Stmt>(0) (0..7): Assign(Assign { lhs: Idx::<Expr>(0), op: None, rhs: Idx::<Expr>(2) })

expr:
Idx::<Expr>(0) (0..2): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (0..0): Missing
Idx::<Expr>(2) (5..7): Paren(Paren { expr: Idx::<Expr>(1) })

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (0..1, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): 0..1

