compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_prim_char_seq_type.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "var _ : char(1)"

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 13..14 }): Expr(Literal(Integer(1)))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 8..15 }): Type(Primitive(SizedChar(Expr(ExprId(HirId(Idx::<HirNode>(0)))))))
HirId(Idx::<HirNode>(2)) (Span { file: None, range: 0..15 }): Stmt(ConstVar(ConstVar { is_register: false, is_const: false, names: [DefId(0)], tail: TypeSpec(TypeId(HirId(Idx::<HirNode>(1)))) }))

root stmts:
[StmtId(HirId(Idx::<HirNode>(2)))]
symtab:
DefId(0): (Span { file: None, range: 4..5 }, Symbol { name: "_", kind: Declared, is_pervasive: false, def_id: DefId(0), next_use: 0 })

